cabal-version:       2.4
name:                hit-on
version:             0.1.0.0
synopsis:            Haskell Git Helper Tool
description:         Haskell Git Helper Tool
homepage:            https://github.com/kowainik/hit-on
bug-reports:         https://github.com/kowainik/hit-on/issues
license:             MPL-2.0
license-file:        LICENSE
author:              Veronika Romashkina, Dmitrii Kovanikov
maintainer:          Kowainik <xrom.xkov@gmail.com>
copyright:           2019 Kowainik
category:            Git, CLI Tool
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.6.5

source-repository head
  type:                git
  location:            https://github.com/kowainik/hit-on.git

common common-options
  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                       DeriveGeneric
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       KindSignatures
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeApplications
                       ViewPatterns

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Hit
                         Hit.Cli
                         Hit.ColorTerminal
                         Hit.Core
                         Hit.Git
                           Hit.Git.Status
                         Hit.Issue

  autogen-modules:     Paths_hit_on
  other-modules:       Paths_hit_on
                       Prelude

  build-depends:       base-noprelude ^>= 4.12.0.0
                     , ansi-terminal >= 0.8
                     , directory ^>= 1.3
                     , github ^>= 0.20
                     , gitrev ^>= 1.3
                     , optparse-applicative ^>= 0.14
                     , process ^>= 1.6
                     , relude ^>= 0.5
                     , shellmet >= 0.0.0
                     , text
                     , vector ^>= 0.12

executable hit
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs

  build-depends:       base ^>= 4.12.0.0
                     , hit-on

  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N


test-suite hit-on-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs

  build-depends:       base
                     , text
                     , hspec
                     , github
                     , hit-on

  ghc-options:        -threaded
                      -rtsopts
                      -with-rtsopts=-N