cabal-version:       2.4
name:                hit-on
version:             0.2.0.0
synopsis:            Haskell Git Helper Tool
description:         Haskell Git Helper Tool
homepage:            https://github.com/kowainik/hit-on
bug-reports:         https://github.com/kowainik/hit-on/issues
license:             MPL-2.0
license-file:        LICENSE
author:              Veronika Romashkina, Dmitrii Kovanikov
maintainer:          Kowainik <xrom.xkov@gmail.com>
copyright:           2019-2020 Kowainik
category:            Git, CLI Tool
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.8.3

source-repository head
  type:                git
  location:            https://github.com/kowainik/hit-on.git

common common-options
  build-depends:       base ^>= 4.13.0.0
                     , relude ^>= 0.7.0.0

  mixins:              base hiding (Prelude)
                     , relude (Relude as Prelude)

  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8.1)
    ghc-options:       -Wmissing-deriving-strategies
                       -Werror=missing-deriving-strategies

  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                       DeriveGeneric
                       DerivingStrategies
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       KindSignatures
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeApplications
                       ViewPatterns

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Hit
                         Hit.Cli
                         Hit.Core
                         Hit.Formatting
                         Hit.Git
                           Hit.Git.Amend
                           Hit.Git.Clear
                           Hit.Git.Clone
                           Hit.Git.Commit
                           Hit.Git.Common
                           Hit.Git.Current
                           Hit.Git.Diff
                           Hit.Git.Fix
                           Hit.Git.Fresh
                           Hit.Git.Hop
                           Hit.Git.Log
                           Hit.Git.Milestones
                           Hit.Git.New
                           Hit.Git.Push
                           Hit.Git.Resolve
                           Hit.Git.Stash
                           Hit.Git.Status
                           Hit.Git.Sync
                           Hit.Git.Uncommit
                           Hit.Git.Unstash
                           Hit.Git.Wip
                         Hit.GitHub
                         Hit.Prompt
                         Hit.Issue

  autogen-modules:     Paths_hit_on
  other-modules:       Paths_hit_on

  build-depends:       ansi-terminal >= 0.8
                     , colourista ^>= 0.1
                     , directory ^>= 1.3
                     , github ^>= 0.23
                     , gitrev ^>= 1.3
                     , optparse-applicative ^>= 0.15
                     , process ^>= 1.6
                     , shellmet ^>= 0.0.3.0
                     , text
                     , vector ^>= 0.12

executable hit
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       hit-on

  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite hit-on-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs

  build-depends:       text
                     , hspec ^>= 2.7.1
                     , github
                     , hit-on

  ghc-options:        -threaded
                      -rtsopts
                      -with-rtsopts=-N
